# tokview

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: 2026-06-06-usage-panel-and-ux.md  tokview-IA.md  tokview-PRD.md
tokview/: __init__.py  __main__.py  app.py  new_session_screen.py  pty_terminal.py  session.py  sidebar.py  status_bar.py  tokview.tcss  usage_panel.py  usage_poller.py
