[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tokview"
version = "0.1.0"
description = "TUI for hosting AI agents (Claude Code, Hermes, etc.) with a live token-usage panel."
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "jdethankim" },
]
keywords = ["claude", "claude-code", "hermes", "ccusage", "terminal", "tui", "textual"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Terminals",
]
dependencies = [
    "textual>=8.2,<9",
    "pyte>=0.8,<0.9",
]

[project.scripts]
tokview = "tokview.app:main"

[tool.hatch.build.targets.wheel]
packages = ["tokview"]

[tool.hatch.build.targets.wheel.force-include]
"tokview/tokview.tcss" = "tokview/tokview.tcss"
